	- Fixes AutoTune infinite fuel not applying to Firespitter helicopter engines.
	- Remove the requirement of having a WM for the AI to work.
	- Add the post-terrain avoidance cool-down slider to the AI GUI.
	- AI now more intelligent about turning on Radars/Sonars; will not automatically turn on Active Sonar if present on a craft.
- Competition:
	- Save/load tournament score weights to/from the settings.cfg.
	- Waypoint Mode max laps can now be set to a user-specified value (WAYPOINT_MAX_LAPS, default 5) in the BDA settings menu.
- Game Modes:
	- Waypoint Gates can now set AI speed limits on a per-gate basis to permit setting up braking zones before a turn/Rally courses with target speeds/etc.
	- 'Activate Guard After Gate n' setting now ends the course when FFA is complete, not when last alive craft completes the course.
	- Vengeance Mutator blast radius and delay can now be set in the BDA settings menu.
	- Don't check for fuel for afterburners if infinite fuel is enabled.
	- Fix issue with Subsystem Battle Damage option occasionally setting non-flammable parts/parts without subsystem modules on fire.
- Weapons:
	- Fix lasers being able to fire as long as > 0 EC is present.
	- Add bulletLuminance field for setting non-tracer brightness.
	- Fix weapons in salvo mode with symmetry twins firing when only enough ammo for one weapon to fire.
	- Fix heatRays not adding heat to hit parts.
	- Fix kinetic damage having damage reduction from armor being applied when hitting unarmored parts.
	- Fix sabot rounds reporting incorrect penetration values in the right click menu.
	- Missiles:
		- Can now set cluster missile trigger distance when mounting cluster missiles on reloadable rails.
		- Nuke LightFX radius now set by effective blast range, not thermalRadius value.
		- Fix NRE when AI tries to fire Modular Missiles.
		- Fix heatseeking Missiles with very narrow sensorFOVs losing lock right before impact with a target.